# uniclipboard

./: .codecov.yml  .env.example  .gitignore  .goreleaser-win.yml  .goreleaser.yml  Cargo.toml  Makefile  README.md  diesel.toml  tarpaulin.toml  uniclipboard.db
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
migrations/2024-10-21-095123_create_devices/: down.sql  up.sql
migrations/2024-10-31-140532_create_file_metadata/: down.sql  up.sql
scripts/: build-cross-release.sh  replace-bin.ps1
src/: cli.rs  clipboard.rs  clipboard_handler.rs  config.rs  connection.rs  context.rs  device.rs  encrypt.rs  errors.rs  file_metadata.rs  image.rs  key_mouse_monitor.rs  lib.rs  logger.rs  main.rs  message.rs  migrations.rs  network.rs  schema.rs  uni_clipboard.rs  utils.rs
src/clipboard/: arboard_clipboard.rs  clipboard.rs  factory.rs  local.rs  mod.rs  traits.rs  utils.rs  win_clipboard.rs
src/db/: db.rs  helper.rs  mod.rs
src/db/dao/: device.rs  file_metadata.rs  mod.rs
src/models/: device.rs  file_metadata.rs  mod.rs
src/network/: mod.rs  webdav.rs  websocket.rs
src/remote_sync/: manager.rs  mod.rs  traits.rs  webdav_handler.rs  webdav_sync.rs  websocket_handler.rs  websocket_sync.rs
src/web/: mod.rs  response.rs  server.rs
src/web/handlers/: client.rs  message_handler.rs  mod.rs  websocket.rs  websocket_message.rs
src/web/routes/: device.rs  download.rs  mod.rs  websocket.rs
tests/: cli_tests.rs  clipboard_tests.rs  cloud_clipboard_hanlder_tests.rs  config_tests.rs  encrypt_tests.rs  file_metadata_tests.rs  key_mouse_monitor_tests.rs  local_clipboard_hanlder_tests.rs  message_tests.rs  network_tests.rs  uni_clipboard_tests.rs  web_api_tests.rs  webdav_clipboard_tests.rs  websocket_message_handler_tests.rs  websocket_tests.rs
