[package]
name = "uniclipboard"
version = "0.1.1"
edition = "2021"

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size
strip = true      # Remove debug symbols

[features]
clipboard_tests = []
network_tests = []
vendored_openssl = ["openssl-sys/vendored"]
hardware_tests = []
testing = []

[dependencies]
# 网络通信
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0.89"

# 日志
log = "0.4"
env_logger = { version = "0.10", features = ["color"] }

# 命令行参数解析
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10.4"

# WebDAV 客户端
reqwest_dav = "0.1.13"
rand = "0.8.5"
flate2 = "1.0.33"
bytes = "1.7.1"
sha2 = "0.10.8"
hex = "0.4.3"
chrono = "0.4.38"
base64 = "0.22.1"
dirs = "5.0.1"
toml = "0.8.19"
once_cell = "1.19.0"
image = "0.25.2"
openssl-sys = "0.9"
device_query = "2.1.0"

# 加密
aes-gcm = "0.10.3"
tokio-tungstenite = "0.19"
futures-util = "0.3"
async-trait = "0.1.82"
futures = "0.3.30"
clipboard-rs = "0.2.1"
console = "0.15.8"
twox-hash = "1.6.3"
rayon = "1.10.0"
png = "0.17.14"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.0" }
winapi = { version = "0.3.9", features = [
    "winuser",
    "basetsd",
    "minwindef",
    "winbase",
] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
mockito = "0.31"
tempfile = "3.2"
bytes = "1.0"
chrono = "0.4"
lazy_static = "1.4.0"
dotenv = "0.15.0"
mockall = "0.11"
tokio = { version = "1", features = ["full"] }
serial_test = "3.1.1"
enigo = "0.2.1"
arboard = "3.4.1"
